--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ matrix:
   fast_finish: true
 
 # Only build pushes to the master branch (and PRs)
-branches:
-  only:
-    - master
+# branches:
+#   only:
+#     - master
 
 before_install:
   # Github-PR-Status secret
