--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: go
 
-go:
-  - tip
-
 addons:
   hosts:
     - le.wtf
@@ -34,6 +31,9 @@ matrix:
 #     - master
 
 before_install:
+  - curl -O https://storage.googleapis.com/golang/go1.5rc1.linux-386.tar.gz
+  - tar xzvf go1.5rc1.linux-386.tar.gz
+  - export PATH=$PWD/go/bin:$PATH
   # Github-PR-Status secret
   - openssl aes-256-cbc -K $encrypted_53b2630f0fb4_key -iv $encrypted_53b2630f0fb4_iv -in test/github-secret.json.enc -out test/github-secret.json -d || true
 
